# gts-rust

./: -  .gitmodules  Cargo.toml  Makefile  README.md  clippy.toml
.github/workflows/: ci.yml
gts/: Cargo.toml
gts-cli/: Cargo.toml
gts-cli/src/: cli.rs  gen_schemas.rs  lib.rs  logging.rs  main.rs  server.rs
gts-cli/tests/: cli_run_tests.rs  logging_middleware_tests.rs  server_tests.rs
gts-macros/: Cargo.toml  README.md
gts-macros-cli/: Cargo.toml
gts-macros-cli/src/: main.rs
gts-macros-test/: Cargo.toml  README.md
gts-macros-test/src/: lib.rs
gts-macros/src/: lib.rs
gts-macros/tests/: inheritance_tests.rs  integration_tests.rs
gts-macros/tests/compile_fail/: base_parent_mismatch.rs  base_parent_mismatch.stderr  base_parent_single_segment.rs  base_parent_single_segment.stderr  base_true_multi_segment.rs  base_true_multi_segment.stderr  enum_not_supported.rs  enum_not_supported.stderr  invalid_file_extension.rs  invalid_file_extension.stderr  missing_base.rs  missing_base.stderr  missing_description.rs  missing_description.stderr  missing_file_path.rs  missing_file_path.stderr  missing_properties.stderr  missing_property.rs  missing_property.stderr  missing_schema_id.rs  multiple_type_generics.rs  multiple_type_generics.stderr  nested_direct_serialize.rs  nested_direct_serialize.stderr  nested_direct_serialize_cfg_attr.rs  nested_direct_serialize_cfg_attr.stderr  non_gts_generic.rs  non_gts_generic.stderr  tuple_struct.rs  tuple_struct.stderr  unit_struct.rs  unit_struct.stderr  unknown_attribute.rs  unknown_attribute.stderr  version_mismatch_major.rs  version_mismatch_major.stderr  version_mismatch_minor_missing_schema.rs  version_mismatch_minor_missing_schema.stderr  version_mismatch_minor_missing_struct.rs  version_mismatch_minor_missing_struct.stderr  (+6 more)
gts-macros/tests/compile_fail/schemas/: user.v1~.schema.json
gts-macros/tests/schemas/: gts.x.test.entities.product.v1~.schema.json  gts.x.test.entities.user.v1~.schema.json
gts/src/: entities.rs  files_reader.rs  gts.rs  gts_tests.rs  lib.rs  ops.rs  ops_tests.rs  path_resolver.rs  schema.rs  schema_cast.rs  schema_compat.rs  schema_traits.rs  store.rs  store_test.rs  store_tests.rs  x_gts_ref.rs
