[package]
name = "gts-macros-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Test crate for GTS schema generation macros"

[dependencies]
gts-macros = { path = "../gts-macros" }
serde.workspace = true
serde_json.workspace = true
