[package]
name = "gts-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for GTS schema generation"

[lints]
workspace = true

[lib]
proc-macro = true
test = false

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde_json.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
trybuild = "1.0"
jsonschema.workspace = true
gts = { path = "../gts" }
